--- a/styles.css
+++ b/styles.css
@@ -91,13 +91,15 @@ h1 {
 .hero-image img {
     width: 500px;
     height: 350px;
+    border-radius: 8px;
+    border-color: none;
 }
 
 /* monke info */
 
 .boxes {
-    align-items: center;
     display: flex;
+    align-items: center;
 }
 
 .info {
@@ -108,7 +110,8 @@ h1 {
 }
 
 .monke {
-    padding: 5px;
+    display: flex;
+    padding: 5px 0px 0px 0px;
     font-size: 18px;
     opacity: 0.6;
 }
@@ -135,7 +138,7 @@ h1 {
 .quote {
     display: flex;
     background-color: #e5e7eb;
-flex-direction: column;
+    flex-direction: column;
     padding:  0 200px;
 }
 
@@ -151,3 +154,52 @@ flex-direction: column;
     padding-bottom: 20px;
     padding-right: 10px;
 }
+
+/* */
+
+.sign-up {
+    background-color: #3882f6;
+    margin: 50px 200px;
+    padding: 10px 80px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    border-color: none;
+}
+
+.sign-item {
+    flex: 1;
+}
+
+.signs-text {
+    text-align: left;
+}
+
+.signs-text p {
+    color: #fff;
+    opacity: 0.7;
+    margin: 5px 30px 30px 50px;
+}
+
+h3 {
+    color: #fff;
+    padding: 0;
+    margin: 30px 0px 0px 50px;
+}
+
+.signs-button button {
+    color: #fff;
+    border-color: #fff;
+    border-radius: 8px;
+    background-color: #3882F6;
+    padding: 5px 25px;
+    font-size: 15px;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    background: #1f2937;
+  }
