--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,20 @@ body {
     background-color: white;
 }
 
+/* #wrapper {
+    font-family: 'Roboto', arial;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    background-color: white;
+} */
+
 .container {
     display: flex;
     flex-direction: column;
 }
+
+/* header part */
 
 .navbar {
     color: #f9faf8;
@@ -17,6 +27,7 @@ body {
     align-items: center;
     padding: 20px 0px 0px 10px;
     background-color: #1A232F;
+    box-shadow: 0 10px 20px -1px rgb(24, 24, 24);
 }
 
 .header-logo img {
@@ -41,7 +52,7 @@ body {
     padding: 10px;
 }
 
-/* header part */
+/* Welcome Area */
 
 .hero {
     display: flex;
@@ -58,30 +69,72 @@ body {
     flex-direction: column;
     text-align: left;
     margin-right: 0;
-    /* No margin for small screens */
 }
 
 .hero-cta p {
     font-family: 'Roboto', arial;
 }
 
-h1 {
+.hero h1 {
     font-size: 36px;
-    /* Adjust the font size for smaller screens */
     font-weight: bold;
     color: #F9FAF8;
     margin: 0;
     font-family: 'Roboto', arial;
-    text-shadow: 2px 2px 2px rgb(0, 0, 0);
+    text-shadow: 5px 6px 2px rgb(0, 0, 0);
 }
 
 .hero-image img {
     max-width: 100%;
-    /* Make the image responsive */
     height: auto;
+    box-shadow: 0 10px 20px -1px rgb(24, 24, 24),
+        inset 0 20px 20px -0px rgb(32, 32, 32);
 }
 
-/* blog */
+.hero-image figcaption {
+    font-size: 12px;
+}
+
+.timetable {
+    padding: 20px;
+    overflow-x: auto;
+    /* overflow-y: auto; */
+    /* 605 */
+}
+
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(200, 200, 200);
+    letter-spacing: 1px;
+    font-size: 0.8rem;
+    /*     padding: 10px; */
+    margin-right: auto;
+    margin-left: auto;
+}
+
+td,
+th {
+    border: 1px solid rgb(190, 190, 190);
+    padding: 5px 10px;
+}
+
+th {
+    background-color: rgb(235, 235, 235);
+}
+
+td {
+    text-align: center;
+}
+
+tr:nth-child(even) td {
+    background-color: rgb(250, 250, 250);
+}
+
+tr:nth-child(odd) td {
+    background-color: rgb(245, 245, 245);
+}
+
+/* Blog */
 
 .blog {
     display: flex;
@@ -94,9 +147,9 @@ h1 {
     width: 100%;
 }
 
+
 .blog h2 {
     font-size: 28px;
-    /* Adjust the font size for smaller screens */
     font-style: italic;
     font-weight: lighter;
     color: #1f2937;
@@ -105,30 +158,58 @@ h1 {
 
 .blog b {
     font-size: 28px;
-    /* Adjust the font size for smaller screens */
     color: #1f2937;
     text-align: center;
-    padding-top: 20px;
+    /* padding-top: 200px; */
 }
 
 .blog p {
-    font-size: 16px;
-    /* Adjust the font size for smaller screens */
+    font-size: 18px;
     padding: 0 10px 10px;
-    /* Adjust the padding for smaller screens */
 }
 
 .blog ul,
-a {
+ol, dl {
     text-align: left;
     color: #1f2937;
 }
 
-div.blog>div:nth-of-type(even) {
-    background: #ffffff;
-    padding-top: 10px;
-    /* Adjust the padding for smaller screens */
+.blog-photo {
+    display: flex;
+    max-width: 20%;
+    align-items: center;
 }
+
+.blog figcaption {
+    text-align: left;
+}
+
+/* Changes the colour for every nth Div to differentiate each blog post */
+
+main.blog>article:nth-of-type(even) {
+    background: #ffffff;
+    padding-top: 20px;
+}
+
+.blog blockquote {
+    padding: 1vw;
+}
+
+#quote {
+    background-color: #e5e7eb;
+    color: black;
+    font-size: 14px;
+}
+
+#semanticsQuote {
+    font-size: 16px;
+}
+
+.descriptions {
+    padding: 1vw;
+}
+
+/* Footer */
 
 footer {
     display: flex;
@@ -138,48 +219,58 @@ footer {
     background: #1f2937;
 }
 
-/* Media query for iPhone-sized screens */
-@media screen and (max-width: 375px) {
+/* Media query for smaller screens */
 
-    /* Adjust styles for iPhone-sized screens */
+@media screen and (max-width: 1000px) {
+    .hero {
+        padding: 50px
+    }
+
+    .blog-photo {
+        max-width: 35%;
+    }
+}
+
+
+@media screen and (max-width: 900px) {
+    .hero {
+        padding: 40px
+    }
+
+    .blog-photo {
+        max-width: 40%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+
     body {
         font-size: 16px;
-        /* Adjust the base font size for smaller screens */
     }
 
     .navbar {
         padding: 10px 0 0 10px;
-        /* Adjust padding for the navbar */
     }
 
     .header-logo img {
         width: 40px;
-        /* Make the logo smaller */
         height: 40px;
     }
 
     .links {
         font-size: 16px;
-        /* Adjust the font size for links */
     }
 
     .hero {
-        padding: 60px;
-        /* Adjust padding for the hero section */
+        padding: 20px;
+        flex-direction: column;
+        align-items: flex-start;
     }
 
     h1 {
         font-size: 24px;
-        /* Adjust the font size for h1 */
     }
 
-    .hero-image img {
-        max-width: 100%;
-        /* Make the image responsive */
-        height: auto;
-    }
-
-    /* Adjust styles for the blog section as needed */
     .blog h2 {
         font-size: 24px;
     }
@@ -189,10 +280,51 @@ footer {
     }
 
     .blog p {
-        font-size: 14px;
-        /* Adjust the font size for paragraphs */
+        font-size: 16px;
         padding: 0 10px 10px;
     }
 
-    /* Adjust other styles as needed for small screens */
+    .blog-photo {
+        max-width: 50%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+    .timetable {
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 500px) {
+    .hero {
+        padding: 20px
+    }
+
+    .navbar a {
+        font-size: 14px;
+    }
+
+    .blog-photo {
+        max-width: 60%;
+    }
+}
+
+/* Removes image on small phones */
+
+@media screen and (max-width: 389px) {
+    .hero-image img {
+        display: none;
+    }
+
+    .blog-photo {
+        max-width: 60%;
+        /* max-height: 50%; */
+    }
+
+    .blog p {
+        font-size: 18px;
+        padding: 0 10px 10px;
+    }
 }
